build-pod.yaml
apiVersion: v1
kind: Pod
spec:
  containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
    - name: maven
      image: erivando/maven:3.9.0-openjdk-11 #maven:3.8.6-openjdk-11
      #command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
      imagePullPolicy: Always # use cache or pull image for agent
      resources:  # limits the resources your build contaienr
        requests:
          cpu: "250m"
          memory: "512Mi"
        limits:
          cpu: "5000m"
          memory: "3Gi"
    - name: docker
      image: docker:20.10.2-git
      #command: ["tail", "-f", "/dev/null"]
      imagePullPolicy: Always
      resources: {}
      volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock # We use the k8s host docker engine
  volumes:
    - name: docker
      hostPath:
        path: /var/run/docker.sock
