k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-pipeline-cicd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: app-pipeline-cicd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: <IMAGE_TAG>
        # resources:
        #   requests: {}
        #   limits: {}
        resources:
          requests:
            cpu: '0.5'
            memory: 128Mi
          limits:
            cpu: 1
            memory: 1Gi
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tz-america
          mountPath: /etc/localtime
      volumes:
        - name: tz-america
          hostPath:
            path: /usr/share/zoneinfo/America/Fortaleza
            type: File
  selector:
    matchLabels:
        app: sample-app
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: app-pipeline-cicd
  labels:
    app: sample-app
  annotations:
    metallb.universe.tf/address-pool: int-pool
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: LoadBalancer
  #loadBalancerIP: 10.130.1.x
  externalTrafficPolicy: Local

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: sample-app
   namespace: app-pipeline-cicd
   annotations:
      haproxy.org/check: enabled
      haproxy.org/forwarded-for: enabled
      haproxy.org/load-balance: roundrobin
      haproxy.org/ssl-redirect: 'true'
      haproxy.org/ssl-redirect-code: '301'
spec:
  rules:
    - host: hello-world-test.unilab.edu.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                  name: sample-app
                  port:
                     number: 80
